<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/general">
        <wuest.markus.vertretungsplan.GradeListPreference
            android:key="@string/SELECTED_GRADE"
            android:title="@string/mygrade" />
        <PreferenceScreen android:title="Layout">
            <EditTextPreference
                android:inputType="number"
                android:numeric="integer"
                android:key="@string/PAST_DAYS"
                android:summary="Anzahl der Tage, die im Wochenplan automatisch geladen werden"
                android:title="Geldaene vergangene Tage"
                />
            <EditTextPreference
                android:inputType="number"
                android:numeric="integer"
                android:key="@string/FUTURE_DAYS"
                android:summary="Anzahl der Tage, die im Wochenplan automatisch geladen werden"
                android:title="Geladene zukünftige Tage"
                />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="Automatisch Laden">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/UPDATE"
            android:title="@string/refresh" />
        <EditTextPreference
            android:dependency="@string/UPDATE"
            android:inputType="number"
            android:key="@string/UPDATE_TIME"
            android:numeric="integer"
            android:summary="Standard: 15min."
            android:title="Häufigkeit"
            />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="@string/UPDATE"
            android:key="@string/NOTIFICATION"
            android:title="@string/notification"
            android:summary="@string/notification_inform"/>
    </PreferenceCategory>
    <!--<PreferenceScreen android:title="Farben">
        <wuest.markus.colorpicker.ColorPreference
            android:key="dash_colorkey"
            android:title="Preference Title"
            android:summary="Preference summary"
            android:defaultValue="@android:color/white"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            app:numColumns="5"
            app:itemLayout="@layout/dash_grid_item_color"/>
    </PreferenceScreen>-->
    <PreferenceCategory android:title="Erweitertes">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/SEARCH_FOR_UPDATES"
            android:title="App-Update"
            android:summary="Im Hintergrund nach Updates suchen." />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/DEVELOPER_MODE"
            android:title="@string/developermode" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/NO_EXPIRE"
            android:title="@string/noexpire" />
    </PreferenceCategory>
</PreferenceScreen>