<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textNotificationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timetablechange"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow android:id="@+id/rowNotification">

            <TextView android:id="@+id/textNotificationOld"
                android:text="@string/olddata"
                android:layout_marginRight="5dp" />

            <TextView android:id="@+id/textNotificationNew"
                android:text="@string/newdata" />
        </TableRow>
    </TableLayout>

</LinearLayout>