<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="wuest.markus.vertretungsplan.TableEditor"
    tools:showIn="@layout/activity_table_editor">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Stunde"
                    android:textAppearance="?android:attr/textAppearance" />

                <TextView
                    android:id="@+id/textHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1 - 1"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/input_grade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/grade"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:nextFocusDown="@+id/input_day"
                    android:singleLine="true"
                    android:text="">

                    <requestFocus />
                </AutoCompleteTextView>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/input_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/day"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:nextFocusDown="@+id/input_hour"
                    android:singleLine="true"
                    android:text="" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/input_hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Stunde"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:nextFocusDown="@+id/input_teacher"
                    android:singleLine="true"
                    android:text="1 - 1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/input_teacher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/teacher"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:nextFocusDown="@+id/input_subject"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/input_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/subject"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:nextFocusDown="@+id/input_room"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/input_room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/room"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:nextFocusDown="@+id/input_repeattype"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_repeattype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/input_repeattype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repeattype"
                    android:imeOptions="actionDone"
                    android:inputType="textCapCharacters"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
